--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 spring.application.name=runnerz
 server.port=8080
-spring.h2.console.enabled=true
+
+# h2 in-memory db
+#spring.h2.console.enabled=true
+#spring.datasource.name=runnerz
+#spring.datasource.generate-unique-name=false
+
+# persistent db
 spring.datasource.name=runnerz
-spring.datasource.generate-unique-name=false
+spring.datasource.url=jdbc:postgresql://localhost:5432/runnerz
+spring.datasource.username=
+spring.datasource.password=
+spring.sql.init.mode=always
