add docker and postgresql with spring data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ server.port=8080
 # persistent db
 spring.datasource.name=runnerz
 spring.datasource.url=jdbc:postgresql://localhost:5432/runnerz
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=eifzed
+spring.datasource.password=password
 spring.sql.init.mode=always
